# HelloLua-CommonLibSSE-NG

./: .gitmodules  CMakeLists.txt  README.md  README.md.new  install.bat  vcpkg-configuration.json
.github/workflows/: build.yml
Scripts/: ExampleModule.lua  events.lua  startup.lua  test_modules.lua  utils.lua
docs/: LuaModuleSystem.md  ModuleTemplate.lua
ext/skse64/: skse64.sln  skse64_readme.txt  skse64_whatsnew.txt
ext/skse64/.github/workflows/: testbuild.yaml
ext/skse64/skse64/: BSModelDB.cpp  BSModelDB.h  GameAPI.cpp  GameAPI.h  GameBSExtraData.h  GameCamera.h  GameData.cpp  GameData.h  GameEvents.cpp  GameEvents.h  GameExtraData.cpp  GameExtraData.h  GameFormComponents.h  GameForms.cpp  GameForms.h  GameHandlers.h  GameInput.cpp  GameInput.h  GameMenus.cpp  GameMenus.h  GameObjects.cpp  GameObjects.h  GameRTTI.cpp  GameReferences.cpp  GameReferences.h  GameResources.cpp  GameSettings.cpp  GameSettings.h  GameStreams.h  GameThreads.cpp  GameTypes.h  GameUtilities.cpp  Hooks_Camera.cpp  Hooks_Data.cpp  Hooks_Event.cpp  Hooks_Gameplay.cpp  Hooks_Handlers.cpp  Hooks_NetImmerse.cpp  Hooks_Papyrus.cpp  Hooks_SaveLoad.cpp  (+41 more)
ext/skse64/skse64/cmake/: headerlist.cmake  sourcelist.cmake
ext/skse64/skse64_common/: Utilities.cpp  skse64_common.vcxproj  skse_version.h
ext/skse64/skse64_common/cmake/: headerlist.cmake
ext/skse64/skse64_loader/: main.cpp  skse64_loader.vcxproj
ext/skse64/skse64_loader_common/: IdentifyEXE.cpp  MSSCCPRJ.SCC  skse64_loader_common.vcxproj
ext/skse64/skse64_msstore_loader/: main.cpp
ext/skse64/skse64_msstore_stub/: main.cpp
ext/skse64/skse64_steam_loader/: main.cpp  skse64_steam_loader.vcxproj
include/Core/: LuaFunctionRegistry.h  LuaManager.h  LuaModuleLoader.h  LuaNativeFunctions.h  LuaSKSEManager.h  SKSEManager.h
src/: Main.cpp
src/Core/: LuaFunctionRegistry.cpp  LuaManager.cpp  LuaModuleLoader.cpp  LuaNativeFunctions.cpp  LuaSKSEManager.cpp  Papyrus.cpp  SKSEManager.cpp
